--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/scss" href="scss/app.scss">
+
   </head>
   <body>
     <section class="hero is-link">
